Fixes price amount overlap issue

--- a/src/app/common/product/components/products-table/products-table.component.scss
+++ b/src/app/common/product/components/products-table/products-table.component.scss
@@ -13,6 +13,10 @@
 	}
 }
 
+editable-label-app {
+	width: 100%;
+}
+
 .preview-imgs {
 	position: relative;
 	border-radius: var(--border-radius);
